--- a/notebooks/federated_attack_simulation_poisoning_data.ipynb
+++ b/notebooks/federated_attack_simulation_poisoning_data.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "At this point, we are ready to apply some data attack to some nodes. For this simulation, we choose to apply data \n",
-    "poisoning to the 20\\% of the nodes. For that purpose, we implement the inferface FederatedTransformation with a shuffling of the training labels of federated_data and create FederatedPoisoninigDataAttack, which implements FederatedDataAttack with a data poisoning in a certain percentage of the nodes. The full code is in [Federated Attack](../shfl/private/federated_attack.py)."
+    "poisoning to the 20\\% of the nodes. For that purpose, we implement the inferface FederatedTransformation with a shuffling of the training labels of federated_data and create FederatedPoisoninigDataAttack, which implements FederatedDataAttack with a data poisoning in a certain percentage of the nodes. The full code is in [federated_attack.py](../shfl/private/federated_attack.py)."
    ]
   },
   {
