Minor changes to Notebooks.
Typos corrected;
links added and updated to point to relative paths when possible;
rephrasing and added small explanation;
some notebook names changed for uniformity.

--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Federated learning: Aggregation operators\n",
     "\n",
-    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](https://github.com/sherpaai/Sherpa.FL/blob/master/notebooks/basic_concepts.ipynb))."
+    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](./basic_concepts.ipynb))."
    ]
   },
   {
@@ -75,8 +75,8 @@
     "        labeled_data.data = (labeled_data.data - self.__mean)/self.__std\n",
     "        \n",
     "        \n",
-    "mean = np.mean(test_data.data)\n",
-    "std = np.std(test_data.data)\n",
+    "mean = np.mean(train_data.data)\n",
+    "std = np.std(train_data.data)\n",
     "shfl.private.federated_operation.apply_federated_transformation(federated_data, Normalize(mean, std))\n",
     "\n",
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))"
@@ -86,23 +86,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have loaded and federated the data and established the learning model, it only remains to establish the aggregation operator. At the moment, we have implemented: FedAvg and WeightedFedAvg. The implementation of the federated aggregation operators are as follows."
+    "Once we have loaded and federated the data and established the learning model, it only remains to establish the aggregation operator. At the moment, the following classes are included in the platform: `FedAvg` and `WeightedFedAvg`. The implementations of the federated aggregation operators are as follows."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Federated Averaging (FedAvg) Operator\n",
+    "## Federated Averaging (`FedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of FedAvg (see [FedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
+    "In this section, we detail the implementation of `FedAvg` (see [FedAVg](../shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
     "\n",
-    "It is based on the arithmetic mean of the local weights $W_i$ trained in each of the local clients $C_i$. That is, the weights $W$ of the global model after each round of training are\n",
+    "It is based on the arithmetic mean of the local parameters $W_i$ trained in each of the $N$ local clients $C_i$. That is, the parameters $W$ of the global model after each round of training are\n",
     "\n",
-    "$$W = \\frac{1}{n} \\sum_{i=1}^n W_i$$\n",
+    "$$W = \\frac{1}{N} \\sum_{i=1}^N W_i$$\n",
     "\n",
     "\n",
-    "For its implementation, we create a class that implements [FederatedAggregator](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/federated_aggregator.py) interface. The method aggregate_weights is overwritten calculating the mean of the local weights of each client. "
+    "For its implementation, we create a class that implements [FederatedAggregator](../shfl/federated_aggregator/federated_aggregator.py) interface. The method `aggregate_weights` is overwritten calculating the mean of the local weights of each client."
    ]
   },
   {
@@ -144,15 +144,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Weighted Federated Averaging (WeightedFedAvg) Operator\n",
+    "## Weighted Federated Averaging (`WeightedFedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of WeightedFedAvg (see [WeightedFedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/weighted_avgfed_aggregator.py)). It is the weighted version of FedAvg. The weight of each client $C_i$ is determined by the amount of client data $n_i$ with respect to total training data $n$. That is, the weights $W$ of the global model after each round of training are \n",
+    "In this section, we detail the implementation of `WeightedFedAvg` (see [WeightedFedAVg](../shfl/federated_aggregator/weighted_avgfed_aggregator.py)). It is the weighted version of `FedAvg`. The weight of each client $C_i$ is determined by the amount of client's data $n_i$ with respect to total training data $n$. That is, the parameters $W$ of the global model after each round of training are \n",
     "\n",
     "$$W =  \\sum_{i=1}^n \\frac{n_i}{n} W_i$$\n",
     "\n",
     "When all clients have the same amount of data it is equivalent to FedAvg.\n",
     "\n",
-    "For its implementation, we create a class that implements FederatedAggregator interface. The method aggregate_weights is overwritten calculating the weighted mean of the local weights of each client. For that purpose, we first ponderate the local weights using the parameter percentage and, after that, we sum the ponderated weights."
+    "For its implementation, we create a class that implements `FederatedAggregator` interface. The method `aggregate_weights` is overwritten calculating the weighted mean of the local parameters of each client. For that purpose, we first ponderate the local parameters by the percentage and, after that, we sum the ponderated parameters."
    ]
   },
   {
@@ -195,7 +195,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we are ready to establish de federated goverment with any of the implemented aggregation operators and start the federated learning process."
+    "Finally, we are ready to establish de federated goverment with any of the implemented aggregation operators and start the federated learning process.\n",
+    "The class `FederatedGovernment` manages the deployment of the model over the federated data, and is in charge of aggregating the parameters into a central node."
    ]
   },
   {
@@ -217,27 +218,27 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x117596e90>: [5.310560375308991, 0.6539000272750854]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab550>: [4.772594417381287, 0.6820250153541565]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab6d0>: [4.493043189811707, 0.6985750198364258]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab890>: [4.651841709518433, 0.6874499917030334]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caaba50>: [4.808404593467713, 0.6800749897956848]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caabd10>: [3.9967662153720855, 0.7358250021934509]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caabe10>: [5.738841980648041, 0.6251500248908997]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb050>: [6.602431640625, 0.5516250133514404]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb1d0>: [4.06071819601059, 0.7279250025749207]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb3d0>: [5.101232486057281, 0.663100004196167]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb510>: [5.2010588116645815, 0.6607249975204468]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb6d0>: [4.6816134460449215, 0.6840500235557556]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb890>: [7.551041991043091, 0.5055500268936157]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabba50>: [5.055827945232392, 0.6679250001907349]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbc10>: [4.042423392939567, 0.7265999913215637]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbdd0>: [4.29935334982872, 0.7081249952316284]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbf90>: [4.5230098672866825, 0.699999988079071]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf190>: [5.195849438762664, 0.6523000001907349]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf350>: [6.962764186477661, 0.5532000064849854]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf510>: [4.30692459807396, 0.7093499898910522]\n",
-      "Global model test performance : [3.9250435561180113, 0.7217249870300293]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe869a92b70>: [30.299690192604064, 0.6868249773979187]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe898f0c7b8>: [34.14406263712719, 0.6653249859809875]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b6d8>: [41.63892764587403, 0.6065000295639038]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b7b8>: [41.88450068397522, 0.634024977684021]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b898>: [29.57330637178421, 0.7254999876022339]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b978>: [30.292716087722777, 0.6719250082969666]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56ba58>: [31.731726102256776, 0.6801999807357788]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bb38>: [25.576269654619693, 0.7384250164031982]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bc18>: [17.73031958231926, 0.7770749926567078]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bcf8>: [29.556070857334138, 0.6891000270843506]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bdd8>: [32.1354886302948, 0.7148749828338623]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56beb8>: [17.322249989164806, 0.7730249762535095]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bf98>: [38.98305648574829, 0.6497499942779541]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f0b8>: [47.1962620677948, 0.5797500014305115]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f198>: [34.79242058103085, 0.7322499752044678]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f278>: [19.67006440038681, 0.7821999788284302]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f358>: [24.657535381126404, 0.7554000020027161]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f438>: [28.35395282049179, 0.7408499717712402]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f518>: [17.66996148004532, 0.7851250171661377]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f5f8>: [20.42641623047851, 0.7684749960899353]\n",
+      "Global model test performance : [12.024137003624439, 0.7841749787330627]\n",
       "\n",
       "\n",
       "\n"
@@ -251,9 +252,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
@@ -278,5 +279,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
