--- a/notebooks/basic_concepts_model_initialization.ipynb
+++ b/notebooks/basic_concepts_model_initialization.ipynb
@@ -362,9 +362,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (tf2gpu)",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "tf2gpu"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -380,5 +380,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
