--- a/notebooks/differential_privacy_binary_average_attack.ipynb
+++ b/notebooks/differential_privacy_binary_average_attack.ipynb
@@ -9,28 +9,31 @@
     "The basic idea of differential privacy is to make a particular query stochastic so that the underlying data is kept private. The average attack consists of performing the same query many times in order to reliably estimate the underlying data. This is, of course, not desirable so we should either limit the number of queries or design algorithms that are not vulnerable under this kind of attack.\n",
     "\n",
     "In this notebook we present a simple example of this phenomenon based on a single node that contains one binary number $n$ that encodes whether the node is guilty ($n=1$) or innocent ($n=0$). \n",
-    "A randomized response algorithm (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.2) is used to query the node in order to preserve the privacy of $n$."
+    "A randomized response algorithm (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.2, and the notebook [Basic concepts](./differential_privacy_basic_concepts.ipynb)) is used to query the node in order to preserve the privacy of $n$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average attack"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Average attack\n",
+    "\n",
     "We start by creating a single node that contains a binary number. In this case, we set this number to 1 (guilty). By setting f1=0.8, we make sure that 80% of the times we query the node whose data is 1, we get an answer of 1. On the remaining 20% of the cases we obtain an answer of 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import shfl\n",
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.808\n"
+      "0.818\n"
      ]
     }
    ],
@@ -116,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The PRR is: 0\n"
+      "The PRR is: 1\n"
      ]
     }
    ],
@@ -144,19 +147,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From now on, all the external queries are done over the permanent randimized data, while the raw data remains completely hidden."
+    "From now on, all the external queries are done over the permanent randomized data, while the raw data remains completely hidden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.206\n"
+      "0.784\n"
      ]
     }
    ],
