--- a/notebooks/federated_SVD.ipynb
+++ b/notebooks/federated_SVD.ipynb
@@ -818,9 +818,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python (keras)",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "keras"
   },
   "language_info": {
    "codemirror_mode": {
@@ -832,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
