--- a/notebooks/basic_concepts_random_seed.ipynb
+++ b/notebooks/basic_concepts_random_seed.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook we provide a simple example of how to make an experiment of a federated environment with the help of this framework. We are going to use a popular dataset to start the experimentation in a federated environment. The framework provides some functions to load the [Emnist](https://www.nist.gov/itl/products-and-services/emnist-dataset) Digits dataset.\n",
     "\n",
-    "This notebook is a copy of [Basic Concept](./basic_concepts.ipynb) notebook. The difference is that here we set a seed using [Reroducibility](../shfl/private/reproducibility.py) Singleton Class for replicate the experiment. If you execute this experiment many times, you obtain the same result."
+    "This notebook is a copy of [Basic Concept](./basic_concepts.ipynb) notebook. The difference is that here we set a seed using [Reproducibility](../shfl/private/reproducibility.py) Singleton Class in order to ensure de reproducibility of the experiment. If you execute this experiment many times, you should obtain the same results."
    ]
   },
   {
